# fund

./: .gitignore  API_DOCUMENTATION_COMPLETE.md  API_INTEGRATIONS.md  API_QUICK_START.md  DOCUMENTATION_DELIVERY.md  GIT_DEPLOYMENT_GUIDE.md  LICENSE  PROJECT_ARCHITECTURE.md  PROJECT_SUCCESS_REPORT.md  PROJECT_TECHNICAL_DOCUMENTATION.md  QUICKSTART.md  README.md  config.yaml  go.mod  prediction_platform_full_design_v1_2.txt  start.ps1  start_full.ps1  test_api.ps1  test_complete.ps1  test_full_platform.ps1
api/: main.go  test_simple.go
benchmark/: README.md  benchmark_test.go  latency_measurement.go  order_generator.go  throughput_measurement.go
docs/: ABSTRACT_ZH.md  COVER_LETTER_SUBMISSION.md  PAPER_BLUEPRINT.md  PAPER_MANUSCRIPT.md
frontend-modern/: README.md  REALTIME_UI_FIX_GUIDE.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
hft-stream/: go.mod  main.go
indexer/: main.go
ledger/: main.go  main_test.go
matching/: main.go  main_test.go  profile_test.go
price-service/: go.mod  main.go
risk/: main.go  main_test.go
rust-exchange/: API_BOOTSTRAP_CONTEXT_AUDIT_ZH_2026-03-12.md  API_BOOTSTRAP_STORES_AUDIT_ZH_2026-03-12.md  API_DTO_SPLIT_AUDIT_ZH_2026-03-12.md  API_REMAINING_COUPLING_AUDIT_ZH_2026-03-12.md  ARCHITECTURE_MERMAID_ZH_2026-03-12.md  ARCHITECTURE_ZH_CN_2026-03-12.md  CONCURRENCY_ROUTE_AUDIT_ZH_2026-03-12.md  Cargo.toml  FINAL_WORKSPACE_VALIDATION_REPORT_2026-03-12.md  FULL_VALIDATION_REPORT_2026-03-12_SECURITY_AND_FULL_TEST.md  LARGE_CHAIN_TEST_REPORT_2026-03-12.md  README.md  RUNTIME_ERROR_AUDIT_ZH_2026-03-12.md  TRADING_RISK_STATE_MACHINE_ZH_2026-03-12.md  TRADING_RULE_AUDIT_ZH_2026-03-12.md  VALIDATION_REPORT_2026-03-12_ARBITRATION_LADDER_DUAL_APPROVAL.md
rust-exchange/crates/api/: Cargo.toml
rust-exchange/crates/api/src/: accounts.rs  admin.rs  bootstrap.rs  control.rs  dto.rs  governance.rs  helpers.rs  liquidation.rs  main.rs  markets.rs  pricing.rs  security.rs  stores.rs  trading.rs
rust-exchange/crates/eventbus/: Cargo.toml
rust-exchange/crates/eventbus/src/: lib.rs
rust-exchange/crates/instruments/: Cargo.toml
rust-exchange/crates/instruments/src/: lib.rs
rust-exchange/crates/ledger/: Cargo.toml
rust-exchange/crates/ledger/src/: lib.rs
rust-exchange/crates/matching/: Cargo.toml
rust-exchange/crates/matching/examples/: crash_recovery_drill.rs  latency_bench.rs  scale_bench.rs
rust-exchange/crates/matching/src/: high_performance.rs  lib.rs  partitioned.rs
rust-exchange/crates/persistence/: Cargo.toml
rust-exchange/crates/persistence/src/: lib.rs
rust-exchange/crates/projections/: Cargo.toml
rust-exchange/crates/projections/src/: lib.rs
rust-exchange/crates/risk/: Cargo.toml
rust-exchange/crates/risk/src/: lib.rs
rust-exchange/crates/sequencer/: Cargo.toml
rust-exchange/crates/sequencer/src/: lib.rs
rust-exchange/crates/types/: Cargo.toml
rust-exchange/crates/types/src/: lib.rs
scripts/: archive_artifacts.ps1  (+5 more)
server/: README.md  (+6 more)
(+356 files in other folders)
