[workspace]
members = [
    "crates/types",
    "crates/instruments",
    "crates/projections",
    "crates/eventbus",
    "crates/persistence",
    "crates/sequencer",
    "crates/ledger",
    "crates/risk",
    "crates/matching",
    "crates/api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pre-Trading Team"]

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "6.1"
parking_lot = "0.12"
warp = "0.3"
