[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
types = { path = "../types" }
eventbus = { path = "../eventbus" }
instruments = { path = "../instruments" }
ledger = { path = "../ledger" }
matching = { path = "../matching" }
persistence = { path = "../persistence" }
projections = { path = "../projections" }
risk = { path = "../risk" }
sequencer = { path = "../sequencer" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
warp.workspace = true
anyhow.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
