[package]
name = "matching"
version.workspace = true
edition.workspace = true

[dependencies]
types = { path = "../types" }
instruments = { path = "../instruments" }
eventbus = { path = "../eventbus" }
ledger = { path = "../ledger" }
risk = { path = "../risk" }
persistence = { path = "../persistence" }
tokio.workspace = true
dashmap.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
crossbeam = "0.8"
parking_lot = "0.12"
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
